# opengl4cpp

./: CMakeLists.txt  README.MD  glad.c  main.cpp  main_ebo.cpp  main_glsl.cpp  main_vbo.cpp
chapter/: chapter_1.cpp
common/: context.cpp  context.h  renderer.cpp  renderer.h  shader.cpp  shader.h  surface.cpp  surface.h
glsl/: redener_uniform_fs.glsl
include/GLFW/: glfw3.h
include/glad/: glad.h
libs/: libglfw.3.3.dylib
libs/linux/: libglfw.so.3.3
renderer/: renderer_1_triangle.cpp  renderer_1_triangle.h  renderer_rectangle.cpp  renderer_rectangle.h  renderer_triangle.cpp  renderer_triangle.h  renderer_uniform.cpp  renderer_uniform.h
source/: build-lib.sh
